--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     <title>Portfolio d'Amélia Pilou (BTS SIO 2022)</title>
-      
+    <link rel="icon" href="favicon.ico">  
   </head>
   <body>
     <h1>Bonjour et bienvenu sur on portfolio</h1>
