--- a/index.html
+++ b/index.html
@@ -1,27 +1,127 @@
 <!doctype html>
 <html lang="fr">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Portfolio d’Amélia Pilou - BTS SIO SLAM">
-    <meta name="author" content="Amélia Pilou">
+    <head>
+        <!-- Required meta tags -->
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <meta name="description" content="Portfolio d’Amélia Pilou - BTS SIO SLAM">
+        <meta name="author" content="Amélia Pilou">
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
-    <title>Portfolio d'Amélia Pilou (BTS SIO 2022)</title>
-    <link rel="icon" href="favicon.ico">  
-  </head>
-  <body>
-    <h1>Bonjour et bienvenu sur on portfolio</h1>
+        <!-- Bootstrap CSS -->
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
+        <title>Portfolio d'Amélia Pilou (BTS SIO 2022)</title>
+        <link rel="icon" href="favicon.ico">  
+        <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/fontawesome.min.css"
+              rel="stylesheet">
+    </head>
+    <body>
+        <nav class="navbar navbar-dark bg-dark fixed-top navbar-expand-md">
+            <div class="container">
+                <button type="button" class="navbar-toggler" data-toggle="collapse"
+                        data-target="#navbar" aria-controls="navbar">
+                    <span class="sr-only">Navigation raccourcie</span>
+                </button>
+                <a class="navbar-brand" href="#">Mon portfolio</a><!-- comment -->
+                <div id="navbar" class="navbar-collapse collapse">
+                    <ul class="nav navbar-nav">
+                        <li class="active nav-item">
+                            <a href="index.html" class="nav-link">
+                                <span class="fa fa-home"></span> Accueil
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="cv.html" class="nav-link">
+                                <span class="fa fa-id-badge"></span> CV
+                            </a>
+                        </li>
+                        <li class="dropdown nav-item">
+                            <a href="#" class="dropdown-toggle nav-link"
+                               data-toggle="dropdown" role="button">
+                                <span class="fa fa-list-alt"></span> Réalisations <span class="caret"></span>
+                            </a>
+                            <ul class="dropdown-menu" role="menu">
+                                <li role="presentation" class="dropdown-header dropdown-item">
+                                    En autonomie</li>
+                                <li role="presentation" class="dropdown-item">
+                                    <a role="menuitem" href="#">Application Android</a>
+                                </li>
+                                <li role="presentation" class="dropdown-item">
+                                    <a role="menuitem" href="#">Site web</a>
+                                </li>
+                                <li role="presentation" class="dropdown-item">
+                                    <a role="menuitem" href="#">Études et analyses</a>
+                                </li>
+                                <li role="presentation" class="dropdown-divider"></li>
+                                <li role="presentation" class="dropdown-header dropdown-item">
+                                    En entreprise</li>
+                                <li role="presentation" class="dropdown-item">
+                                    <a role="menuitem" href="#">Projet de 1ère année</a>
+                                </li>
+                                <li role="presentation" class="dropdown-item">
+                                    <a role="menuitem" href="#">Projet de 2ème année</a>
+                                </li>
+                            </ul>
+                        </li>
+                        <li class="dropdown nav-item">
+                            <a href="#" class="dropdown-toggle nav-link"
+                               data-toggle="dropdown" role="button">
+                                <span class="fa fa-graduation-cap"></span>
+                                Jury E5 BTS SIO
+                                <span class="caret"></span>
+                            </a>
+                            <ul class="dropdown-menu" role="menu">
+                                <li class="dropdown-header dropdown-item" role="presentation">
+                                    Documentations contexte</li>
+                                <li role="presentation" class="dropdown-item">
+                                    <a role="menuitem" href="#">Présentation</a></li>
+                                <li role="presentation" class="dropdown-item">
+                                    <a role="menuitem" href="#">Application</a></li>
+                                <li role="presentation" class="dropdown-item">
+                                    <a role="menuitem" href="#">Missions à réaliser</a></li>
+                                <li role="presentation" class="dropdown-item">
+                                    <a role="menuitem"href="#">Annexes</a></li>
+                                <li role="presentation" class="dropdown-divider"></li>
+                                <li role="presentation" class="dropdown-header dropdown-item">
+                                    Fiches d'examen</li>
+                                <li role="presentation" class="dropdown-item">
+                                    <a role="menuitem" href="#">Situation professionnelle n°1</a></li>
+                                <li role="presentation" class="dropdown-item">
+                                    <a role="menuitem" href="#">Situation professionnelle n°2</a></li>
+                                <li role="presentation" class="dropdown-divider"></li>
+                                <li role="presentation" class="dropdown-header dropdown-item">
+                                    Démonstrations</li>
+                                <li role="presentation" class="dropdown-item">
+                                    <a role="menuitem" href="#">Démo SP n°1</a></li>
+                                <li role="presentation" class="dropdown-item">
+                                    <a role="menuitem" href="#">Démo SP n°2</a></li>
+                                <li role="presentation"class="dropdown-divider"></li>
+                                <li role="presentation" class="dropdown-header dropdown-item">
+                                    Codes sources</li>
+                                <li role="presentation" class="dropdown-item">
+                                    <a role="menuitem" href="#">Sources SP n°1</a></li>
+                                <li role="presentation" class="dropdown-item">
+                                    <a role="menuitem" href="#">Sources SP n°2</a></li>
+                            </ul>
+                        </li>
+                        <li class="nav-item">
+                            <a href="#" class="nav-link"><span class="fa fa-envelope"></span>
+                                Me contacter
+                            </a>
+                        </li>
 
-    <!-- Optional JavaScript; choose one of the two! -->
+                    </ul>
+                </div>
+            </div>
+        </nav>
+        <h1>Bonjour et bienvenu sur on portfolio</h1>
 
-    <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
-    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
+        <!-- Optional JavaScript; choose one of the two! -->
 
-        
-  </body>
+        <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
+        <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
+
+
+    </body>
 </html>
 
