--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <link rel="icon" href="favicon.ico">  
         <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/fontawesome.min.css"
               rel="stylesheet">
+        <link href="css/accueil.css" rel="stylesheet">
     </head>
     <body>
         <nav class="navbar navbar-dark bg-dark fixed-top navbar-expand-md">
@@ -122,63 +123,75 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
 
         <div class="jumbotron"></div> <!-- Emplacement pour le contenu principal de la page -->
-        <footer>
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-4">
-                        <h2>Étudiante du CNED</h2>
-                        <p>J'ai choisi de suivre le BTS SIO à distance par le Centre National
-                            d'Enseignement à Distance car je souhaitais pourvoir avancer à mon rythme,
-                            choisir moi-même mon emploi du temps, apprendre à être autonome, pouvoir
-                            utiliser les outils de collaboration à distance et devenir plus responsable en
-                            étant capable de me fixer moi-même des contraintes, des limites et des
-                            objectifs à atteindre !
-                        </p>
-                        <p><a class="btn btn-secondary" href="http://www.cned.fr" target="_blank"
-                              role="button">En savoir plus »</a>
-                        </p>
-                    </div>
-                    <div class="col-lg-4">
-                        <h2>Le BTS SIO</h2>
-                        <p>Passionnée d'informatique depuis mon plus jeune âge, j'aime apprendre à faire
-                            de nouvelles choses avec mon ordinateur, mon smartphone ou ma tablette. Une
-                            Geek ? Oui assurément ! Mais j'aimerais maintenant passer au niveau au-dessus
-                            et devenir une vraie Nerd, dans le bon sens du terme ! Après mon bac, le BTS
-                            SIO s'est présenté comme une évidence. Avec 60% d'Informatique "pure", 13%
-                            d'Économie, management et droit de l'informatique, 9% d'Anglais, 9% de culture
-                            générale et 9% de Maths, je savais que cette formation allait me mettre le
-                            pied à l'étrier pour poursuivre ensuite dans cette voie et devenir
-                            informaticienne !
-                        </p>
-                        <p><a class="btn btn-secondary" href="https://fr.wikipedia.org/wiki/Brevet_de_tec
-                              hnicien_supérieur_-_Services_informatiques_aux_organisations"
-                              target="_blank" role="button">En savoir plus »</a>
-                        </p>
-                    </div>
-                    <div class="col-lg-4">
-                        <h2>Option B SLAM</h2>
-                        <p>En fin de premier semestre, on doit choisir notre option. "Solutions
-                            Logicielles et Applications Métiers" est l'option qui m'a séduit&nbsp;!
-                            Travailler en équipe à la satisfaction de besoins d'un client, définir des
-                            spécifications, faire des tests, corriger des bugs, faire de la maintenance,
-                            veiller à la sécurité des données à caractère personnel... tout en apprenant
-                            les bases du métier de développeuse : modélisation des données
-                            avec Merise et UML, programmation objet avec Java, C# et PHP, conception
-                            de bases de données sous PostgreSQL et MySQL, réalisation de
-                            composants logiciels avec Symfony, gestion de projet, méthodes agiles...
-                            J'étais sûre que ça serait fait pour moi !
-                        </p>
-                        <p><a class="btn btn-secondary" href="https://www.onisep.fr/Ressources/Univers-Fo
-                              rmation/Formations/Post-bac/bts-services-informatiques-aux-organisations-op
-                              tion-b-solutions-logicielles-et-applications-metiers" target="_blank"
-                              role="button">En savoir plus »</a>
-                        </p>
-                    </div>
+        <div class="container">
+            <h1>Bonjour et bienvenu sur mon portfolio !</h1>
+            <p>
+                <img id="maPhoto" class="float-left rounded" src="images/AmeliaPilou.jpg"
+                     alt="Ma photo d'identité">Je m'appelle Amélia Pilou, j'ai 21 ans et ce site a pour
+                vocation de me présenter en tant que personne, en tant qu'étudiante
+                et candidate à l'obtention du BTS SIO (Services Informatiques
+                aux Organisations) et en tant que future professionnelle de l'informatique.
+            </p>
+            <p><a class="btn btn-primary btn-lg" href="pages/cv.html" role="button">En savoir plus »</a></p>
+        </div>
+    </div>
+    <footer>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-4">
+                    <h2>Étudiante du CNED</h2>
+                    <p>J'ai choisi de suivre le BTS SIO à distance par le Centre National
+                        d'Enseignement à Distance car je souhaitais pourvoir avancer à mon rythme,
+                        choisir moi-même mon emploi du temps, apprendre à être autonome, pouvoir
+                        utiliser les outils de collaboration à distance et devenir plus responsable en
+                        étant capable de me fixer moi-même des contraintes, des limites et des
+                        objectifs à atteindre !
+                    </p>
+                    <p><a class="btn btn-secondary" href="http://www.cned.fr" target="_blank"
+                          role="button">En savoir plus »</a>
+                    </p>
                 </div>
-                <hr>
-                <p class="text-center" id="copyright">© Amélia Pilou 2021</p>
+                <div class="col-lg-4">
+                    <h2>Le BTS SIO</h2>
+                    <p>Passionnée d'informatique depuis mon plus jeune âge, j'aime apprendre à faire
+                        de nouvelles choses avec mon ordinateur, mon smartphone ou ma tablette. Une
+                        Geek ? Oui assurément ! Mais j'aimerais maintenant passer au niveau au-dessus
+                        et devenir une vraie Nerd, dans le bon sens du terme ! Après mon bac, le BTS
+                        SIO s'est présenté comme une évidence. Avec 60% d'Informatique "pure", 13%
+                        d'Économie, management et droit de l'informatique, 9% d'Anglais, 9% de culture
+                        générale et 9% de Maths, je savais que cette formation allait me mettre le
+                        pied à l'étrier pour poursuivre ensuite dans cette voie et devenir
+                        informaticienne !
+                    </p>
+                    <p><a class="btn btn-secondary" href="https://fr.wikipedia.org/wiki/Brevet_de_tec
+                          hnicien_supérieur_-_Services_informatiques_aux_organisations"
+                          target="_blank" role="button">En savoir plus »</a>
+                    </p>
+                </div>
+                <div class="col-lg-4">
+                    <h2>Option B SLAM</h2>
+                    <p>En fin de premier semestre, on doit choisir notre option. "Solutions
+                        Logicielles et Applications Métiers" est l'option qui m'a séduit&nbsp;!
+                        Travailler en équipe à la satisfaction de besoins d'un client, définir des
+                        spécifications, faire des tests, corriger des bugs, faire de la maintenance,
+                        veiller à la sécurité des données à caractère personnel... tout en apprenant
+                        les bases du métier de développeuse : modélisation des données
+                        avec Merise et UML, programmation objet avec Java, C# et PHP, conception
+                        de bases de données sous PostgreSQL et MySQL, réalisation de
+                        composants logiciels avec Symfony, gestion de projet, méthodes agiles...
+                        J'étais sûre que ça serait fait pour moi !
+                    </p>
+                    <p><a class="btn btn-secondary" href="https://www.onisep.fr/Ressources/Univers-Fo
+                          rmation/Formations/Post-bac/bts-services-informatiques-aux-organisations-op
+                          tion-b-solutions-logicielles-et-applications-metiers" target="_blank"
+                          role="button">En savoir plus »</a>
+                    </p>
+                </div>
             </div>
-        </footer>
-    </body>
+            <hr>
+            <p class="text-center" id="copyright">© Amélia Pilou 2021</p>
+        </div>
+    </footer>
+</body>
 </html>
 
