--- a/pages/cv.html
+++ b/pages/cv.html
@@ -190,7 +190,7 @@
                                 <div class="details float-left"> <a href="https://twitter.com/AmeliaPILOU" title="Lien vers la page Twitter de @AmeliaPilou"><img class="contact-icon" src="../images/cv/twitter-dreamstale71.png" alt="Icone de Twitter"> Twitter </a></div>
                             </div>
                             <div class="meContacter">
-                                <div class="details float-left"> <a href="http://fr.linkedin.com/in/ameliaPilou" title="Lien vers le profil LinkedIn de Amélia Pilou">
+                                <div class="details float-left"> <a href="http://fr.linkedin.com/in/ameliaPiloute" title="Lien vers le profil LinkedIn de Amélia Pilou">
                                         <img class="contact-icon" src="../images/cv/linkedin-dreamstale45.png" alt="Icone de LinkedIn"> LinkedIn</a>
                                 </div>
                             </div>
