--- a/pages/cv.html
+++ b/pages/cv.html
@@ -234,7 +234,7 @@
                                     </div>
                                 </div>
                                 <div class="container">
-                                    <div class="langue">Portugais</div>
+                                    <div class="langue">Portugaise</div>
                                     <div class="niveau">
                                         <span class="badge badge-dark">A1</span>
                                         <span class="badge badge-dark">A2</span>
